              that's no problem as unicode and str can be combined as long as
              the str only contains bytes in the ASCII range.
            - add_entry, will decode the str object on Python 2 using
              locale.getprefferedencoding() as encoding
            - The maxsize key now refers to the number of bytes on both
              Pythons.

2016-07-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.15
        * Makefile.static (print-destinations): \t doesn't work on FreeBSD;
            indented manually with normal whitespace instead.
    0.2.14
        * Makefile.static: Undo change in 0.2.9 causing configuration files
            to not be installed in clean environments:
            - install-dirs now installs CFG_DIR and $(DESTDIR)$(vargamesdir)
            Apparently, install
    0.2.13
        * configure.py: BUGFIX in many find_ functions:
            Don't use Makefile[var] for checking the existence of directories,
            use expand(var, Makefile) instead.  Detected on FreeBSD where
            $(prefix)/var both exists and doesn't.
    0.2.12
        * INSTALL:
            - Tidying.
            - Wrote a section on srcdir, builddir and DESTDIR.
        * Makefile.static (print-destinations):
            - Highscores file
            - Append (directory) on directory lines.
    0.2.11
        *: Tidied up lots of files.
        * BUGS:
            - Updated #6 to match current versions of Anonymine.
            - Tidied
            - Removed #0
        * configure.py:  Wrote missing doc-strings.
        * configure.py:  Moved default Makefile variables from getargs to main.
    0.2.10
        * anonymine_engine.py (init_field2):
            - Use SIGTERM to kill children if SIGCONT is unavailable.
            - Allow fork() to fail.
            - Use signal.alarm() in a more elegant way.
            - Add 64 bits of entropy to the tempfiles, just in case
              open(file, 'wx') fails to do its trick.
